Servicios de listado de trabajos finalizados y pendientes
