# APIDocs/Writerside/openapi.yaml
@@ -481,6 +481,7 @@ paths:
                     example: Error al realizar la consulta en la base de datos
         default:
           description: Error desconocido
+
     # Servicio POST para guardar un nuevo trabajo
     post:
       tags:
@@ -908,6 +909,84 @@ paths:
                   errorMessage:
                     type: string
                     example: 'El trabajador con el id: 3 no se ha encontrado'
+        '500':
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: boolean
+                    example: true
+                  errorMessage:
+                    type: string
+                    example: Error al realizar la consulta en la base de datos
+        default:
+          description: Error desconocido
+
+  /trabajos/finalizados:
+    # Servicio GET para conseguir todos los trabajos
+    get:
+      tags:
+        - trabajos_finalizados
+      summary: Obtener listado de los trabajos realizados
+      description: Obtener el listado completo de todos los trabajos finalizados por todos los trabajadores.
+      operationId: getAllTrabajosFinalizados
+      responses:
+        '200':
+          description: Devolución del listado con los trabajos finalizados
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: boolean
+                    example: false
+                  result:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Trabajo'
+        '500':
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: boolean
+                    example: true
+                  errorMessage:
+                    type: string
+                    example: Error al realizar la consulta en la base de datos
+        default:
+          description: Error desconocido
+
+  /trabajos/pendientes:
+    # Servicio GET para conseguir todos los trabajos
+    get:
+      tags:
+        - trabajos_pendientes
+      summary: Obtener listado de los trabajos pendientes
+      description: Obtener el listado completo de todos los trabajos pendientes de todos los trabajadores.
+      operationId: getAllTrabajosPendientes
+      responses:
+        '200':
+          description: Devolución del listado con los trabajos pendientes
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: boolean
+                    example: false
+                  result:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Trabajo'
         '500':
           description: Error interno del servidor
           content:
